--- a/stats.css
+++ b/stats.css
@@ -124,8 +124,8 @@ main {
 }
 
 .product-container img {
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     margin-bottom: 0.9em;
     object-fit: cover;
   }
@@ -138,7 +138,7 @@ main {
   
   .product-container {
     /* padding: 0 10vw; */
-    height: 150px;
+    height: 165px;
     display: flex;
     overflow-x: auto; 
      scroll-behavior: smooth; 
@@ -150,10 +150,10 @@ main {
   }
 
 
-  .product-card {
+  .stats-product-card {
     border: 1px solid #ddd9d9;
     border-radius: 7px;
-    height: 150px;
+    height: 160px;
     margin: 0 .5em;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
   }
@@ -191,6 +191,7 @@ main {
   
   
   .goals {
+    display: block;
     font-weight: 900;
     color: #454343;
     font-size: 1rem;
@@ -228,6 +229,44 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+
+.marquee {
+  overflow: hidden;
+  display: flex;
+}
+
+.marquee h1{
+  white-space: nowrap;
+}
+
+
+.marquee2 {
+  overflow: hidden;
+  display: flex;
+}
+
+.marquee2 h1{
+  font-family: cursive;
+  white-space: nowrap;
+}
+
+.marquee, .marquee2 {
+  background-color: #f8f8f8;
+  color: #000;
+  padding: 1rem;
+  font-size: .75rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  font-style: italic;
+}
+
+.phone--number{
+  color: #000;
+}
+
 
   
 
