--- a/style.css
+++ b/style.css
@@ -9,6 +9,153 @@ body {
     
 }
 
+
+/* === Product slider ===*/
+/* .container-wrap {
+  width: 90%;
+  max-width: 750px;
+  margin: auto;
+} */
+
+/* .container-wrap {
+  background-color: #f8f8f8;
+} */
+
+.product-category , 
+.product-category-two{
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: sans-serif;
+  margin: .7em 0;
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-weight: 900;
+}
+
+.product-category-two {
+  margin-top: 3em;
+  font-family: 'Courier New', Courier, monospace;
+  text-transform: uppercase;;
+}
+
+.product-container img {
+  height: 200px;
+  width: 200px;
+  margin-bottom: 0.9em;
+  object-fit: cover;
+}
+
+.product {
+  overflow: hidden;
+  text-align: center;
+}
+
+/* .container-wrap {
+  width: 90%;
+  margin: auto;
+  border: 1px solid magenta;
+} */
+
+.product-container {
+  /* padding: 0 10vw; */
+  height: 200px;
+   display: flex;
+  overflow-x: auto; 
+   scroll-behavior: smooth; 
+   color: #2f2e2e;
+   margin-bottom: 1em;
+}
+
+.product-container::-webkit-scrollbar {
+  display: none;
+}
+
+
+.product-card {
+  border: 1px solid #ddd9d9;
+  border-radius: 7px;
+  height: 195px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 180px;
+  margin: 0 .5em;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.product-card:hover {
+  transform: translateY(-2%);
+}
+
+
+
+div.product-image {
+  position: relative;
+  height: 100px;
+  border-radius: 4px;
+}
+
+img.product-thumb {
+  height: 100px;
+  width: 100px;
+}
+
+
+.product-info {
+  width: 100%;
+}
+
+.product-description {
+  font-size: .9rem;
+  line-height: 20px;
+  /* font-family: 'Times New Roman', Times, serif; */
+  font-family: 'Courier New', Courier, monospace;
+  /* text-transform: uppercase; */
+  }
+
+  .goals {
+    font-weight: 900;
+    color: #454343;
+    font-size: 1rem;
+    font-family: 'Courier New', Courier, monospace;
+  }
+
+  .swipe-info {
+    display: flex;
+    justify-content: right;
+    margin-bottom: 2px;
+    gap: 10px;
+    font-style: italic;
+    font-size: .7em;
+    font-weight: 900;
+    text-transform: lowercase;
+  }
+
+  .para {
+    margin-top: .5em;
+    font-family: 'Courier New', Courier, monospace;
+    /* text-transform: uppercase; */
+  }
+
+  .shop-now {
+    font-size: 1.2rem;
+    margin-top: .5em;
+    margin-left: 1em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 900;
+    text-align: left;
+  }
+
+.shop-now-link {
+    text-decoration: none;
+    color: #000000;
+    font-weight: 900;
+}
+
+.price-tag {
+  border-bottom: 1px solid black;
+}
+
+
 .mv {
   width: 200px;
   object-fit: cover;
@@ -229,7 +376,7 @@ body {
   .container {
     width: 100%;
     /* min-height: 83vh; */
-    max-width: 780px;
+    max-width: 760px;
     padding: 20px;
     /* margin-left: 40px;
     margin-right: 40px;
@@ -241,7 +388,6 @@ body {
     align-items: center;
     gap: 20px;
     background-color: #000000;
-    
   }
   
  
@@ -269,6 +415,22 @@ body {
   p.hero-text {
     font-size: .2rem;
   }
+
+.container--video {
+ 
+  width: 90%;
+  max-width: 90%;
+  margin: 0 auto;
+ background-color: #000;
+}
+
+.video-wrapper{
+  
+  width: 100%;
+ 
+ 
+}
+  
 
   /* .hero-text h1 {
     font-size: 3.3rem;
@@ -324,6 +486,8 @@ body {
       margin: 0 auto;
     }
 
+    
+
     img.hero-image {
     width: 100%;
     height: 100%;
@@ -349,6 +513,15 @@ body {
   @media (max-width: 678px) {
     .hero-text h1 {
       font-size: 2rem;
+    }
+
+
+    .container--video {
+    
+      width: 100%;
+      max-width: 100%;
+      margin: 0 auto;
+    
     }
   }
  
